# prostor-examples

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: 1. Типы сервисов.ipynb  2. Контекст.ipynb  3. Сценарий.ipynb  4. Матрица доступности.ipynb  prostor.ipynb  Ф22.ipynb  Ф35 и Ф26.ipynb  Ф36.ipynb
examples/data/: blocks.pickle  blocks_f35.pickle  context_blocks.pickle  dist_mx.pickle  scenario_blocks.pickle  service_types.pickle
examples/misc/: Города федерального значения.ipynb  Ф22 Подготовка обучающей выборки.ipynb
examples/social values paper/: pipeline.ipynb
examples/social values paper/data/: school.geojson  service_types.csv
examples/Ф22/: 0. Подготовка обучающей выборки.ipynb  data.pickle
examples/Ф35 Ф26 Ф36/: 0. Подготовка исходных данных.ipynb  1. Ф36.ipynb
examples/Ф35 Ф26 Ф36/data/: blocks.pickle  service_types.pickle
prostor/: __init__.py
prostor/adapters/: __init__.py  buildings.py  functional_zones.py  service_types.py  services.py
prostor/api/: __init__.py  core.py
prostor/fetchers/: __init__.py  functional_zones.py  territories.py
prostor/fetchers/context/: core.py
prostor/fetchers/misc/: core.py
prostor/fetchers/projects/: __init__.py  context.py  core.py
prostor/fetchers/scenarios/: __init__.py  core.py  functional_zones.py  physical_objects.py  services.py
prostor/fetchers/territories/: __init__.py  core.py  indicators.py  physical_objects.py
prostor/utils/: __init__.py  territories.py
